--- a/de/abi.html
+++ b/de/abi.html
@@ -15,19 +15,19 @@
   <body>
     <header>
       <div>
-        <a href="../du/home.html">
+        <a href="../de/home.html">
           <img class="logo" src="../img/logo.svg" alt="SD" />
         </a>
       </div>
       <ul class="navigator">
-        <li><a href="../du/home.html#projects">Projekte</a></li>
-        <li><a href="../du/home.html#services">Dienstleistungen</a></li>
-        <li><a href="../du/home.html#ourTeam">Team</a></li>
-        <li><a href="../du/home.html#contentUs">Kontakt</a></li>
+        <li><a href="../de/home.html#projects">Projekte</a></li>
+        <li><a href="../de/home.html#services">Dienstleistungen</a></li>
+        <li><a href="../de/home.html#ourTeam">Team</a></li>
+        <li><a href="../de/home.html#contentUs">Kontakt</a></li>
       </ul>
       <div class="langChange langHide">
         <ul>
-          <li class="languageActive">DU</li>
+          <li class="languageActive">DE</li>
           <li><a href="../en/abi.html">EN</a></li>
         </ul>
         <img class="langImg" src="../img/Arrow.svg" alt="" />
@@ -45,18 +45,18 @@
             alt=""
           />
           <ul>
+            <li><a href="../de/home.html#">Hero</a></li>
+            <li><a href="../de/home.html#projects">Projekte</a></li>
+            <li><a href="../de/home.html#services">Dienstleistungen</a></li>
+            <li><a href="../de/home.html#ourTeam">Team</a></li>
+            <li><a href="../de/home.html#contentUs">Kontakt</a></li>
             <li>
               <div class="HamburgerMenuContainerLanguage">
                 <button><a href="../en/abi.html">EN</a></button>
                 <div></div>
-                <button><a href="../du/abi.html">DE</a></button>
+                <button><a href="../de/abi.html">DE</a></button>
               </div>
             </li>
-            <li><a href="../du/home.html#">Hero</a></li>
-            <li><a href="../du/home.html#projects">Projekte</a></li>
-            <li><a href="../du/home.html#services">Dienstleistungen</a></li>
-            <li><a href="../du/home.html#ourTeam">Team</a></li>
-            <li><a href="../du/home.html#contentUs">Kontakt</a></li>
           </ul>
         </div>
       </div>
@@ -232,24 +232,28 @@
       </section>
     </div>
     <div class="mobile">
+
       <section id="contentUs">
         <div class="adoutUs">
-          <h2>Bestellen <span class="borderText"></span>Sie Ihr</span>Projekt jetzt</h2>
+          <h2>
+            Bestellen <span class="borderText">Sie Ihr</span>Projekt jetzt
+          </h2>
           <p class="adoutUsText">
-            Wir sind ein multidisziplinäres Team, das die besten Websites für unsere Kunden erstellt.
+            Wir sind ein multidisziplinäres Team, das die besten Websites für
+            unsere Kunden erstellt.
           </p>
-          <a class="contentUsBtn" href="./email.html">Kontakt</a>
+          <a class="contentUsBtn" href="./email.html">Contact</a>
         </div>
         <div class="peoples">
-          <div class="group peopleBlue">
+          <div class="group peopleBlue" style="margin-top: -102vw;">
             <img src="../img/group/CursorBlue.svg" alt="" />
             <p>Dmytro</p>
           </div>
-          <div class="group peopleRed">
+          <div class="group peopleRed" style="margin-top: -92vw;">
             <img src="../img/group/CursorRed.svg" alt="" />
             <p>Timur</p>
           </div>
-          <div class="group peopleGreen">
+          <div class="group peopleGreen" style="margin-top: -102vw;">
             <img src="../img/group/CursorGreen.svg" alt="" />
             <p>Serhii</p>
           </div>
@@ -265,7 +269,7 @@
             <img src="../img/group/CursorOrange.svg" alt="" />
             <p>Natasha</p>
           </div>
-          <div class="group peopleLightPink">
+          <div class="group peopleLightPink" style="margin-top: -92vw;">
             <img src="../img/group/CursorLightPink.svg" alt="" />
             <p>Nazar</p>
           </div>
@@ -275,6 +279,7 @@
           </div>
         </div>
       </section>
+
     </div>
     </main>
 
