--- a/de/email.html
+++ b/de/email.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> 
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../img/logo.svg" type="image/x-icon">
@@ -10,7 +10,9 @@
   </head>
   <body>
 
- 
+
+
+
     <header>
       <div>
         <a href="../en/home.html">
@@ -19,8 +21,8 @@
       </div>
       <div class="langChange langHide">
         <ul>
-          <li class="languageActive">EN</li>
-          <li><a href="../de/email.html">DE</a></li>
+          <li class="languageActive">DE</li>
+          <li><a href="../en/email.html">EN</a></li>
         </ul>
         <img class="langImg" src="../img/Arrow.svg" alt="" />
       </div>
@@ -37,11 +39,11 @@
             alt=""
           />
           <ul>
-            <li><a href="../en/home.html#">Hero</a></li>
-            <li><a href="../en/home.html#projects">Projects</a></li>
-            <li><a href="../en/home.html#services">Services</a></li>
-            <li><a href="../en/home.html#ourTeam">Team</a></li>
-            <li><a href="../en/home.html#contentUs">Contact</a></li>
+            <li><a href="../de/home.html#">Hero</a></li>
+            <li><a href="../de/home.html#projects">Projekte</a></li>
+            <li><a href="../de/home.html#services">Dienstleistungen</a></li>
+            <li><a href="../de/home.html#ourTeam">Team</a></li>
+            <li><a href="../de/home.html#contentUs">Kontakt</a></li>
             <li>
               <div class="HamburgerMenuContainerLanguage">
                 <button><a href="../en/email.html">EN</a></button>
@@ -53,10 +55,13 @@
         </div>
       </div>
     </header>
+
+
+
     <a class="buttonClose" href="./home.html"></a>
     <div class="emailForm">
-      <h1>Contact <span class="borderText">Us</span></h1>
-      <p>We'll help you find the right plan and pricing for your business.</p>
+      <h1>Kontaktiere <span class="borderText">uns</span></h1>
+      <p>Wir helfen Ihnen, den richtigen Plan und Preis für Ihr Unternehmen zu finden.</p>
       <form class="email">
         <input class="text" type="text" name="name" placeholder="Name *" required/>
         <input class="text emailInput" type="email" name="email" placeholder="Email *" required/>
@@ -66,11 +71,9 @@
           name="message"
           placeholder="Comment"
         />
-        <button class="button" type="submit">Send</button>
+        <button class="button" type="submit">Schicken</button>
       </form>
     </div>
     <script src="../js/formData.js"></script>
-    <script src="../js/buttonOnclik.js"></script>
-    <script src="../js/language.js"></script>
   </body>
 </html>
