--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   </head>
   <body>
     <h2><a href="./en/home.html">en</a></h2>
-    <h2><a href="./du/home.html">DE</a></h2>
+    <h2><a href="./de/home.html">DE</a></h2>
   </body>
 </html>
