--- a/en/abi.html
+++ b/en/abi.html
@@ -27,8 +27,7 @@
       <div class="langChange langHide">
         <ul>
           <li class="languageActive">EN</li>
-          <li><a href="../du/abi.html">DU</a></li>
-          <!-- <li><a href="">RU</a></li> -->
+          <li><a href="../de/abi.html">DE</a></li>
         </ul>
         <img class="langImg" src="../img/Arrow.svg" alt="" />
       </div>
@@ -45,18 +44,18 @@
             alt=""
           />
           <ul>
-            <li>
-              <div class="HamburgerMenuContainerLanguage">
-                <button><a href="../en/abi.html">EN</a></button>
-                <div></div>
-                <button><a href="../du/abi.html">DE</a></button>
-              </div>
-            </li>
             <li><a href="../en/home.html#">Hero</a></li>
             <li><a href="../en/home.html#projects">Projects</a></li>
             <li><a href="../en/home.html#services">Services</a></li>
             <li><a href="../en/home.html#ourTeam">Team</a></li>
             <li><a href="../en/home.html#contentUs">Contact</a></li>
+            <li>
+              <div class="HamburgerMenuContainerLanguage">
+                <button><a href="../en/abi.html">EN</a></button>
+                <div></div>
+                <button><a href="../de/abi.html">DE</a></button>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
