--- a/en/whiteCollar.html
+++ b/en/whiteCollar.html
@@ -27,7 +27,7 @@
       <div class="langChange langHide">
         <ul>
           <li class="languageActive">EN</li>
-          <li><a href="../du/whiteCollar.html">DU</a></li>
+          <li><a href="../de/whiteCollar.html">DE</a></li>
           <!-- <li><a href="">RU</a></li> -->
         </ul>
         <img class="langImg" src="../img/Arrow.svg" alt="" />
@@ -45,18 +45,18 @@
             alt=""
           />
           <ul>
-            <li>
-              <div class="HamburgerMenuContainerLanguage">
-                <button><a href="../en/whiteCollar.html">EN</a></button>
-                <div></div>
-                <button><a href="../du/whiteCollar.html">DE</a></button>
-              </div>
-            </li>
             <li><a href="../en/home.html#">Hero</a></li>
             <li><a href="../en/home.html#projects">Projects</a></li>
             <li><a href="../en/home.html#services">Services</a></li>
             <li><a href="../en/home.html#ourTeam">Team</a></li>
             <li><a href="../en/home.html#contentUs">Contact</a></li>
+            <li>
+              <div class="HamburgerMenuContainerLanguage">
+                <button><a href="../en/whiteCollar.html">EN</a></button>
+                <div></div>
+                <button><a href="../de/whiteCollar.html">DE</a></button>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
