--- a/de/home.html
+++ b/de/home.html
@@ -78,7 +78,7 @@
               Bauen Sie die <span class="borderText">Zukunft</span> gemeinsam
               mit uns!
             </h2>
-            <img class="crlectImg" src="../img/select.svg" alt="" />
+            <img class="crlectImg" src="../img/select.svg" alt="" style="margin-left: -1.7vw;"/>
             <p>Ihre Ziele sind unsere Umsetzung</p>
           </div>
           <a class="buttonHeader" href="./home.html#contentUs"
@@ -209,7 +209,7 @@
 
       <section id="ourTeam">
         <div class="slider-name">
-          <h2>Unser <span class="borderText"> Team</span></h2>
+          <h2>Unser<span class="borderText">Team</span></h2>
           <div>
             <div class="swiper-button-prev-custom"></div>
             <div class="swiper-button-next-custom"></div>
@@ -457,7 +457,7 @@
             <h2>
               Gemeinsam die <span class="borderText">Zukunft</span> bauen!
             </h2>
-            <img class="crlectImg" src="../img/select.svg" alt="" />
+            <img class="crlectImg" src="../img/select.svg" alt="" style="margin-left: 19.58vw; margin-top: 9.22vw;"/>
             <p>Ihre Ziele sind unsere Umsetzung</p>
           </div>
           <a class="buttonHeader" href="./home.html#contentUs">
@@ -837,7 +837,7 @@
         <div class="heroBlock">
           <div class="heroContend">
             <h2>
-              Gemeinsam die <span class="borderText">Zukunft</span>  bauen!
+              Gemeinsam die <span class="borderText">Zukunft</span> bauen!
             </h2>
             <img class="crlectImg" src="../img/select.png" alt="" />
           </div>
@@ -968,7 +968,7 @@
 
       <section id="ourTeam">
         <div class="slider-name">
-          <h2>Unser<span class="borderText">Team</span></h2>
+          <h2>Unser <span class="borderText">Team</span></h2>
           <div>
             <div class="swiper-button-prev-custom"></div>
             <div class="swiper-button-next-custom"></div>
