--- a/de/email.html
+++ b/de/email.html
@@ -75,5 +75,7 @@
       </form>
     </div>
     <script src="../js/formData.js"></script>
+    <script src="../js/buttonOnclik.js"></script>
+    <script src="../js/language.js"></script>
   </body>
 </html>
