--- a/de/home.html
+++ b/de/home.html
@@ -78,7 +78,7 @@
               Bauen Sie die <span class="borderText">Zukunft</span> gemeinsam
               mit uns!
             </h2>
-            <img class="crlectImg" src="../img/select.svg" alt="" style="margin-left: -1.7vw;"/>
+            <img class="crlectImg" src="../img/select.svg" alt="" style="margin-left: -1.4vw;"/>
             <p>Ihre Ziele sind unsere Umsetzung</p>
           </div>
           <a class="buttonHeader" href="./home.html#contentUs"
@@ -839,7 +839,7 @@
             <h2>
               Gemeinsam die <span class="borderText">Zukunft</span> bauen!
             </h2>
-            <img class="crlectImg" src="../img/select.png" alt="" />
+            <img class="crlectImg" src="../img/select.png" alt="" style="width: 59.53vw;"/>
           </div>
           <a class="buttonHeader" href="./home.html#contentUs">
             Lass uns gehen!</a
