--- a/en/home.html
+++ b/en/home.html
@@ -445,7 +445,7 @@
             <p>Your goals are our execution</p>
           </div>
           <a class="buttonHeader" href="./home.html#contentUs">Lets go!</a>
-        </div>
+        </div>                            
       </section>
       <img class="imageHero" src="../img/deviderLine.svg" alt="" />
 
@@ -583,9 +583,9 @@
         <div class="swiperBox"></div>
         <div class="swiper mySwiperBox">
           <!-- Additional required wrapper -->
-          <div class="swiper-wrapper">
+          <div class="swiper-wrapper" style="width: 51.95vw;">
             <!-- Slides -->
-            <div class="swiper-slide">
+            <div class="swiper-slide" style="width: 55.60vw;">
               <div class="contend">
                 <img class="linkTeams" src="../img/teams/socials.svg" alt="" />
                 <p class="slide-name">Timur Mazepa</p>
@@ -664,7 +664,7 @@
           </div>
         </div>
         <!-- Slider main container dir="rtl" -->
-        <div class="swiper mySwiper">
+        <div class="swiper mySwiper" >
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
