--- a/en/organicShop.html
+++ b/en/organicShop.html
@@ -44,7 +44,7 @@
             alt=""
           />
           <ul>
-            <li><a href="../ed/home.html#">Hero</a></li>
+            <li><a href="../en/home.html#">Hero</a></li>
             <li><a href="../en/home.html#projects">Project</a></li>
             <li><a href="../en/home.html#services">Services</a></li>
             <li><a href="../en/home.html#ourTeam">Team</a></li>
