--- a/de/home.html
+++ b/de/home.html
@@ -81,12 +81,13 @@
             <img class="crlectImg" src="../img/select.svg" alt="" style="margin-left: -1.4vw;"/>
             <p>Ihre Ziele sind unsere Umsetzung</p>
           </div>
-          <a class="buttonHeader" href="./home.html#contentUs"
+          <a class="buttonHeader" href="./email.html"
             >Lass uns gehen!</a
           >
         </div>
       </section>
       <img class="imageHero" src="../img/deviderLine.svg" alt="" />
+
       <section id="projects" class="projects">
         <h2 class="projectsH2">
           Hier einige unserer <span class="borderText">Projekte</span>
@@ -147,7 +148,7 @@
                 basieren. Die Anwendung ist im Play Market und im App Store
                 verfügbar.
               </p>
-              <a class="buttonProject4" href="./abi.html">View</a>
+              <a class="buttonProject4" href="./abi.html">Siehe</a>
             </div>
           </div>
         </div>
@@ -156,7 +157,7 @@
       <section id="services">
         <h2>Unser <span class="borderText">Dienstleistungen</span></h2>
         <div class="servicesCards">
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader1">design</h3>
               <ul>
@@ -173,7 +174,7 @@
               </div>
             </div>
           </a>
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader2">Entwicklung</h3>
               <ul>
@@ -190,7 +191,7 @@
               </div>
             </div>
           </a>
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader3">Aktualisieren</h3>
               <ul>
@@ -460,7 +461,7 @@
             <img class="crlectImg" src="../img/select.svg" alt="" style="margin-left: 19.58vw; margin-top: 9.22vw;"/>
             <p>Ihre Ziele sind unsere Umsetzung</p>
           </div>
-          <a class="buttonHeader" href="./home.html#contentUs">
+          <a class="buttonHeader" href="./email.html">
             Lass uns gehen!</a
           >
         </div>
@@ -535,7 +536,7 @@
       <section id="services">
         <h2>Unser <span class="borderText">Dienstleistungen</span></h2>
         <div class="servicesCards">
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader1">design</h3>
               <ul>
@@ -552,7 +553,7 @@
               </div>
             </div>
           </a>
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader2">Entwicklung</h3>
               <ul>
@@ -569,7 +570,7 @@
               </div>
             </div>
           </a>
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader3">Aktualisieren</h3>
               <div class="serviseInfo">
@@ -841,7 +842,7 @@
             </h2>
             <img class="crlectImg" src="../img/select.png" alt="" style="width: 59.53vw;"/>
           </div>
-          <a class="buttonHeader" href="./home.html#contentUs">
+          <a class="buttonHeader" href="./email.html">
             Lass uns gehen!</a
           >
         </div>
@@ -914,7 +915,7 @@
       <section id="services">
         <h2>Unser <span class="borderText">Dienstle <br/> istungen</span></h2>
         <div class="servicesCards">
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader1">design</h3>
               <ul>
@@ -931,7 +932,7 @@
               </div>
             </div>
           </a>
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader2">Entwicklung</h3>
               <ul>
@@ -948,7 +949,7 @@
               </div>
             </div>
           </a>
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader3">Aktualisieren</h3>
               <ul>
