--- a/en/home.html
+++ b/en/home.html
@@ -80,7 +80,7 @@
             <img class="crlectImg" src="../img/select.svg" alt="" />
             <p>Your goals are our execution</p>
           </div>
-          <a class="buttonHeader" href="./home.html#contentUs">Lets go!</a>
+          <a class="buttonHeader" href="./email.html">Lets go!</a>
         </div>
       </section>
 
@@ -157,7 +157,7 @@
       <section id="services">
         <h2>Our <span class="borderText">Services</span></h2>
         <div class="servicesCards">
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader1">Design</h3>
               <ul>
@@ -174,7 +174,7 @@
               </div>
             </div>
           </a>
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader2">Development</h3>
               <ul>
@@ -191,7 +191,7 @@
               </div>
             </div>
           </a>
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader3">Update</h3>
               <ul>
@@ -444,7 +444,7 @@
             <img class="crlectImg" src="../img/select.svg" alt="" />
             <p>Your goals are our execution</p>
           </div>
-          <a class="buttonHeader" href="./home.html#contentUs">Lets go!</a>
+          <a class="buttonHeader" href="./email.html">Lets go!</a>
         </div>                            
       </section>
       <img class="imageHero" src="../img/deviderLine.svg" alt="" />
@@ -517,7 +517,9 @@
       <section id="services">
         <h2>Our <span class="borderText">Services</span></h2>
         <div class="servicesCards">
-          <a href="#contentUs">
+
+          <a href="./email.html">
+
             <div class="servicesFragment">
               <h3 class="serviceHeader1">Design</h3>
               <ul>
@@ -534,7 +536,7 @@
               </div>
             </div>
           </a>
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader2">Development</h3>
               <ul>
@@ -551,7 +553,7 @@
               </div>
             </div>
           </a>
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader3">Update</h3>
               <div class="serviseInfo">
@@ -583,9 +585,9 @@
         <div class="swiperBox"></div>
         <div class="swiper mySwiperBox">
           <!-- Additional required wrapper -->
-          <div class="swiper-wrapper" style="width: 51.95vw;">
+          <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide" style="width: 55.60vw;">
+            <div class="swiper-slide">
               <div class="contend">
                 <img class="linkTeams" src="../img/teams/socials.svg" alt="" />
                 <p class="slide-name">Timur Mazepa</p>
@@ -749,6 +751,7 @@
       </section>
       <img class="imageHero" src="../img/deviderLine.svg" alt="" />
 
+      
       <section id="contentUs">
         <div class="adoutUs">
           <h2>Order <span class="borderText">Your</span> Project Now</h2>
@@ -793,6 +796,7 @@
           </div>
         </div>
       </section>
+
       <img class="imageHero" src="../img/deviderLine.svg" alt="" />
     </main>
 
@@ -808,7 +812,7 @@
             <h2>Built the <span class="borderText">future</span> together!</h2>
             <img class="crlectImg" src="../img/select.png" alt="" />
           </div>
-          <a class="buttonHeader" href="./home.html#contentUs">Lets go!</a>
+          <a class="buttonHeader" href="./email.html">Lets go!</a>
         </div>
       </section>
       <img class="imageHero" src="../img/deviderLine.svg" alt="" />
@@ -879,7 +883,7 @@
       <section id="services">
         <h2>Our <span class="borderText">Services</span></h2>
         <div class="servicesCards">
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader1">Design</h3>
               <ul>
@@ -896,7 +900,7 @@
               </div>
             </div>
           </a>
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader2">Development</h3>
               <ul>
@@ -913,7 +917,7 @@
               </div>
             </div>
           </a>
-          <a href="#contentUs">
+          <a href="./email.html">
             <div class="servicesFragment">
               <h3 class="serviceHeader3">Update</h3>
               <ul>
