--- a/en/home.html
+++ b/en/home.html
@@ -512,8 +512,6 @@
         </div>
       </section>
 
-      <!-- <img class="imageHero" src="../img/deviderLine.svg" alt="" /> -->
-
       <section id="services">
         <h2>Our <span class="borderText">Services</span></h2>
         <div class="servicesCards">
@@ -571,7 +569,6 @@
           </a>
         </div>
       </section>
-      <!-- <img class="imageHero" src="../img/deviderLine.svg" alt="" /> -->
 
       <section id="ourTeam">
         <div class="slider-name">
@@ -583,6 +580,7 @@
         </div>
 
         <div class="swiperBox"></div>
+        
         <div class="swiper mySwiperBox">
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
@@ -596,6 +594,7 @@
               <img class="imageBW" src="../img/SD/photo/timur_bw.png" alt="" />
               <img class="imageC" src="../img/SD/photo/timur_c.png" alt="" />
             </div>
+
             <div class="swiper-slide">
               <div class="contend">
                 <img class="linkTeams" src="../img/teams/socials.svg" alt="" />
@@ -605,6 +604,7 @@
               <img class="imageBW" src="../img/SD/photo/andrey_bw.png" alt="" />
               <img class="imageC" src="../img/SD/photo/andrey_c.png" alt="" />
             </div>
+
             <div class="swiper-slide">
               <div class="contend">
                 <img class="linkTeams" src="../img/teams/socials.svg" alt="" />
@@ -614,6 +614,7 @@
               <img class="imageBW" src="../img/SD/photo/bohdan_bw.png" alt="" />
               <img class="imageC" src="../img/SD/photo/bohdan_c.png" alt="" />
             </div>
+            
             <div class="swiper-slide">
               <div class="contend">
                 <img class="linkTeams" src="../img/teams/socials.svg" alt="" />
@@ -743,8 +744,8 @@
                 <p class="slide-name">Sakhanda Nazar</p>
                 <p class="slide-description">Front-End Developer</p>
               </div>
-              <img class="imageBW" src="../img/SD/photo/nazar_bw.png" alt="" />
-              <img class="imageC" src="../img/SD/photo/nazar_c.png" alt="" />
+              <img class="imageBW" src="../img/SD/photo/nazar_bw.png" alt="" style="margin-left: 100px;"/>
+              <img class="imageC" src="../img/SD/photo/nazar_c.png" alt="" style="margin-left: 100px;"/>
             </div>
           </div>
         </div>
