--- a/de/home.html
+++ b/de/home.html
@@ -52,11 +52,11 @@
             alt=""
           />
           <ul>           
-            <li><a href="../de/home.html#">Held</a></li>
+            <!-- <li><a href="../de/home.html#">Held</a></li>
             <li><a href="../de/home.html#projects">Projekte</a></li>
             <li><a href="../de/home.html#services">Dienste</a></li>
             <li><a href="../de/home.html#ourTeam">Team</a></li>
-            <li><a href="../de/home.html#contentUs">Kontakt</a></li>
+            <li><a href="../de/home.html#contentUs">Kontakt</a></li> -->
             <li>
               <div class="HamburgerMenuContainerLanguage">
                 <button><a href="../en/home.html">EN</a></button>
@@ -1234,12 +1234,12 @@
     <footer class="tablet">
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
-        <ul class="navigator">
+        <!-- <ul class="navigator">
           <li><a href="#projects">Projekte</a></li>
           <li><a href="#services">Dienste</a></li>
           <li><a href="#ourTeam">Team</a></li>
           <li><a href="#contentUs">kontaktiere uns</a></li>
-        </ul>
+        </ul> -->
         <ul class="mediaInfo">
           <li>Datenschutzrichtlinie</li>
           <li>© 2023 Alle Rechte vorbehalten.</li>
