--- a/de/organicShop.html
+++ b/de/organicShop.html
@@ -46,11 +46,11 @@
             alt=""
           />
           <ul>
-            <li><a href="../de/home.html#">Hero</a></li>
+            <!-- <li><a href="../de/home.html#">Hero</a></li>
             <li><a href="../de/home.html#projects">Projekte</a></li>
             <li><a href="../de/home.html#services">Dienstleistungen</a></li>
             <li><a href="../de/home.html#ourTeam">Team</a></li>
-            <li><a href="../de/home.html#contentUs">Kontakt</a></li>
+            <li><a href="../de/home.html#contentUs">Kontakt</a></li> -->
             <li>
               <div class="HamburgerMenuContainerLanguage">
                 <button><a href="../en/organicShop.html">EN</a></button>
@@ -202,6 +202,7 @@
         </div>
       </section>
     </div>
+
     <div class="tablet">
       <section id="contentUs">
         <div class="adoutUs">
@@ -300,7 +301,7 @@
     </main>
 
     <footer class="desktop">
-      <img class="imageHero" src="../img/devider.svg" alt="" />
+      <img class="imageHero" src="../img/deviderLine.svg" alt="" />
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="navigator">
@@ -318,12 +319,12 @@
     <footer class="tablet">
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
-        <ul class="navigator">
+        <!-- <ul class="navigator">
           <li><a href="#projects">Projekte</a></li>
           <li><a href="#services">Dienste</a></li>
           <li><a href="#ourTeam">Team</a></li>
           <li><a href="#contentUs">Kontakt</a></li>
-        </ul>
+        </ul> -->
         <ul class="mediaInfo">
           <li>Datenschutzbestimmungen</li>
           <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
