--- a/en/whiteCollar.html
+++ b/en/whiteCollar.html
@@ -45,11 +45,11 @@
             alt=""
           />
           <ul>
-            <li><a href="../en/home.html#">Hero</a></li>
+            <!-- <li><a href="../en/home.html#">Hero</a></li>
             <li><a href="../en/home.html#projects">Projects</a></li>
             <li><a href="../en/home.html#services">Services</a></li>
             <li><a href="../en/home.html#ourTeam">Team</a></li>
-            <li><a href="../en/home.html#contentUs">Contact</a></li>
+            <li><a href="../en/home.html#contentUs">Contact</a></li> -->
             <li>
               <div class="HamburgerMenuContainerLanguage">
                 <button><a href="../en/whiteCollar.html">EN</a></button>
@@ -299,7 +299,7 @@
     </main>
 
     <footer class="desktop">
-      <img class="imageHero" src="../img/devider.svg" alt="" />
+      <img class="imageHero" src="../img/deviderLine.svg" alt="" />
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="navigator">
@@ -317,12 +317,12 @@
     <footer class="tablet">
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
-        <ul class="navigator">
+        <!-- <ul class="navigator">
           <li><a href="#projects">Projects</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#ourTeam">Team</a></li>
           <li><a href="#contentUs">Contact</a></li>
-        </ul>
+        </ul> -->
         <ul class="mediaInfo">
           <li>Privacy Policy</li>
           <li>© 2023 All rights reserved.</li>
