--- a/de/abi.html
+++ b/de/abi.html
@@ -45,11 +45,11 @@
             alt=""
           />
           <ul>
-            <li><a href="../de/home.html#">Hero</a></li>
+            <!-- <li><a href="../de/home.html#">Hero</a></li>
             <li><a href="../de/home.html#projects">Projekte</a></li>
             <li><a href="../de/home.html#services">Dienstleistungen</a></li>
             <li><a href="../de/home.html#ourTeam">Team</a></li>
-            <li><a href="../de/home.html#contentUs">Kontakt</a></li>
+            <li><a href="../de/home.html#contentUs">Kontakt</a></li> -->
             <li>
               <div class="HamburgerMenuContainerLanguage">
                 <button><a href="../en/abi.html">EN</a></button>
@@ -284,7 +284,7 @@
     </main>
 
     <footer class="desktop">
-      <img class="imageHero" src="../img/devider.svg" alt="" />
+      <img class="imageHero" src="../img/deviderLine.svg" alt="" />
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="navigator">
