--- a/en/abi.html
+++ b/en/abi.html
@@ -44,11 +44,11 @@
             alt=""
           />
           <ul>
-            <li><a href="../en/home.html#">Hero</a></li>
+            <!-- <li><a href="../en/home.html#">Hero</a></li>
             <li><a href="../en/home.html#projects">Projects</a></li>
             <li><a href="../en/home.html#services">Services</a></li>
             <li><a href="../en/home.html#ourTeam">Team</a></li>
-            <li><a href="../en/home.html#contentUs">Contact</a></li>
+            <li><a href="../en/home.html#contentUs">Contact</a></li> -->
             <li>
               <div class="HamburgerMenuContainerLanguage">
                 <button><a href="../en/abi.html">EN</a></button>
@@ -280,7 +280,7 @@
     </main>
 
     <footer class="desktop">
-      <img class="imageHero" src="../img/devider.svg" alt="" />
+      <img class="imageHero" src="../img/deviderLine.svg" alt="" />
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="navigator">
