--- a/en/home.html
+++ b/en/home.html
@@ -52,11 +52,11 @@
             alt=""
           />
           <ul>
-            <li><a href="../en/home.html#">Hero</a></li>
+            <!-- <li><a href="../en/home.html#">Hero</a></li>
             <li><a href="../en/home.html#projects">Projects</a></li>
             <li><a href="../en/home.html#services">Services</a></li>
             <li><a href="../en/home.html#ourTeam">Team</a></li>
-            <li><a href="../en/home.html#contentUs">Contact</a></li>
+            <li><a href="../en/home.html#contentUs">Contact</a></li> -->
             <li>
               <div class="HamburgerMenuContainerLanguage">
                 <button><a href="../en/home.html">EN</a></button>
@@ -1179,12 +1179,12 @@
     <footer class="tablet">
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
-        <ul class="navigator">
+        <!-- <ul class="navigator">
           <li><a href="#projects">Projects</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#ourTeam">Team</a></li>
           <li><a href="#contentUs">Contact us</a></li>
-        </ul>
+        </ul> -->
         <ul class="mediaInfo">
           <li>Privacy Policy</li>
           <li>© 2023 All rights reserved.</li>
