--- a/en/organicShop.html
+++ b/en/organicShop.html
@@ -44,11 +44,11 @@
             alt=""
           />
           <ul>
-            <li><a href="../en/home.html#">Hero</a></li>
+            <!-- <li><a href="../en/home.html#">Hero</a></li>
             <li><a href="../en/home.html#projects">Project</a></li>
             <li><a href="../en/home.html#services">Services</a></li>
             <li><a href="../en/home.html#ourTeam">Team</a></li>
-            <li><a href="../en/home.html#contentUs">Contact</a></li>
+            <li><a href="../en/home.html#contentUs">Contact</a></li> -->
             <li>
               <div class="HamburgerMenuContainerLanguage">
                 <button><a href="../en/organicShop.html">EN</a></button>
@@ -291,7 +291,7 @@
     </main>
 
     <footer class="desktop">
-      <img class="imageHero" src="../img/devider.svg" alt="" />
+      <img class="imageHero" src="../img/deviderLine.svg" alt="" />
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="navigator">
@@ -310,10 +310,10 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="navigator">
-          <li><a href="#projects">Projects</a></li>
+          <!-- <li><a href="#projects">Projects</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#ourTeam">Team</a></li>
-          <li><a href="#contentUs">Contact</a></li>
+          <li><a href="#contentUs">Contact</a></li> -->
         </ul>
         <ul class="mediaInfo">
           <li>Privacy Policy</li>
