--- a/en/organicShop.html
+++ b/en/organicShop.html
@@ -12,7 +12,7 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div>
         <a href="../en/home.html">
           <img class="logo" src="../img/logo.svg" alt="SD" />
@@ -61,7 +61,7 @@
       </div>
     </header>
     <main>
-      <section id="organicShop">
+      <section id="organicShop" class="organicShopAnimation">
         <h4>Online Shop</h4>
         <h3>Organic <span class="borderText">shop</span></h3>
       </section>
@@ -71,7 +71,7 @@
         alt=""
       />
 
-      <section id="aboutProject">
+      <section id="aboutProject" class="aboutProject">
         <div>
           <h3>About <span class="borderText">Project</span></h3>
           <p>
@@ -87,7 +87,7 @@
         </div>
       </section>
 
-      <section id="goalsAndObjectives">
+      <section id="goalsAndObjectives" class="goalsAndObjectives">
         <h3>Goals and <span class="borderText">Objectives</span></h3>
         <ul>
           <li>
@@ -110,7 +110,7 @@
       </section>
       <img class="organicShopImage" src="../img/organicShop/Photo.png" alt="" />
 
-      <section id="mainPage">
+      <section id="mainPage" class="mainPage">
         <h3>Main <span class="borderText">Page</span></h3>
         <div>
           <img src="../img/organicShop/page1.png" alt="" />
@@ -338,5 +338,6 @@
     </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
+    <script src="../js/organic.js"></script>
   </body>
 </html>
