--- a/de/home.html
+++ b/de/home.html
@@ -20,7 +20,7 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div>
         <a href="../de/home.html">
           <img class="logo" src="../img/logo.svg" alt="SD" />
@@ -1266,5 +1266,6 @@
     <script src="../js/language.js"></script>
     <script src="../js/cdn.jsdelivr.net_npm_swiper@10_swiper-bundle.min.js"></script>
     <script src="../js/swiper-slider.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
