--- a/de/organicShop.html
+++ b/de/organicShop.html
@@ -13,7 +13,7 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div>
         <a href="../de/home.html">
           <img class="logo" src="../img/logo.svg" alt="SD" />
@@ -348,5 +348,6 @@
     </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
