--- a/en/organicShop.html
+++ b/en/organicShop.html
@@ -12,7 +12,8 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-    <header>
+    
+    <header class="header">
       <div>
         <a href="../en/home.html">
           <img class="logo" src="../img/logo.svg" alt="SD" />
@@ -338,5 +339,6 @@
     </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
