--- a/de/organicShop.html
+++ b/de/organicShop.html
@@ -13,6 +13,7 @@
     <title>SD Rroduction</title>
   </head>
   <body>
+
     <header class="header">
       <div>
         <a href="../de/home.html">
@@ -29,7 +30,6 @@
         <ul>
           <li class="languageActive">DE</li>
           <li><a href="../en/organicShop.html">EN</a></li>
-          <!-- <li><a href="">RU</a></li> -->
         </ul>
         <img class="langImg" src="../img/Arrow.svg" alt="" />
       </div>
@@ -63,7 +63,7 @@
       </div>
     </header> 
     <main>
-      <section id="organicShop">
+      <section id="organicShop"  class="organicShopAnimation">
         <h4>Online Geschäft</h4>
         <h3>Bio <span class="borderText">Laden</span></h3>
       </section>
@@ -73,7 +73,7 @@
         alt=""
       />
 
-      <section id="aboutProject">
+      <section id="aboutProject" class="aboutProject">
         <div>
           <h3>Über <span class="borderText">Projekt</span></h3>
           <p>
@@ -89,7 +89,7 @@
         </div>
       </section>
 
-      <section id="goalsAndObjectives">
+      <section id="goalsAndObjectives" class="goalsAndObjectives">
         <h3>Ziele und <span class="borderText">Zielsetzungen</span></h3>
         <ul>
           <li>
@@ -348,6 +348,6 @@
     </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="../js/organic.js"></script>
   </body>
 </html>
