--- a/en/organicShop.html
+++ b/en/organicShop.html
@@ -12,7 +12,8 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-    <header>
+
+    <header class="header">
       <div>
         <a href="../en/home.html">
           <img class="logo" src="../img/logo.svg" alt="SD" />
@@ -61,6 +62,7 @@
       </div>
     </header>
     <main>
+
       <section id="organicShop" class="organicShopAnimation">
         <h4>Online Shop</h4>
         <h3>Organic <span class="borderText">shop</span></h3>
@@ -108,10 +110,11 @@
           </li>
         </ul>
       </section>
+      
       <img class="organicShopImage" src="../img/organicShop/Photo.png" alt="" />
 
-      <section id="mainPage" class="mainPage">
-        <h3>Main <span class="borderText">Page</span></h3>
+      <section id="mainPage">
+        <h3 class="mainPageAnimation">Main <span class="borderText">Page</span></h3>
         <div>
           <img src="../img/organicShop/page1.png" alt="" />
           <img src="../img/organicShop/page2.png" alt="" />
@@ -121,7 +124,6 @@
       <video width="100%" autoplay muted loop>
         <source src="../img/SD/video/organic_shop.mp4" type="video/mp4" />
       </video>
-      <!-- <img class="organicShopImage" src="https://c.tenor.com/eDSLATUVQB0AAAAC/leonardo-di-caprio-cheers.gif" alt=""> -->
 
       <section id="internalPages">
         <div>
@@ -338,5 +340,6 @@
     </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
+    <script src="../js/organic.js"></script>
   </body>
 </html>
