--- a/en/whiteCollar.html
+++ b/en/whiteCollar.html
@@ -12,7 +12,8 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-    <header>
+
+    <header class="header">
       <div>
         <a href="../en/home.html">
           <img class="logo" src="../img/logo.svg" alt="SD" />
@@ -61,14 +62,17 @@
         </div>
       </div>
     </header>
+
+    
     <main>
-      <section id="organicShop">
+
+      <section id="organicShop"  class="organicShopAnimation">
         <h4>Business website</h4>
         <h3>White <span class="borderText">Collar</span></h3>
       </section>
       <img class="organicShopImage" src="../img/whiteCollar/Image.png" alt="" />
 
-      <section id="aboutProject">
+      <section id="aboutProject" class="aboutProject">
         <div>
           <h3>About <span class="borderText">Project</span></h3>
           <p>
@@ -85,7 +89,7 @@
         </div>
       </section>
 
-      <section id="goalsAndObjectives">
+      <section id="goalsAndObjectives" class="goalsAndObjectives">
         <h3>Goals and <span class="borderText">Objectives</span></h3>
         <ul>
           <li>
@@ -346,5 +350,6 @@
     </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
+    <script src="../js/organic.js"></script>
   </body>
 </html>
