--- a/de/whiteCollar.html
+++ b/de/whiteCollar.html
@@ -13,7 +13,7 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div>
         <a href="../de/home.html">
           <img class="logo" src="../img/logo.svg" alt="SD" />
@@ -62,13 +62,13 @@
       </div>
     </header>
     <main>
-      <section id="organicShop">
+      <section id="organicShop" class="organicShopAnimation">
         <h4>Geschäftliche Website</h4>
         <h3>White <span class="borderText">Collar</span></h3>
       </section>
       <img class="organicShopImage" src="../img/whiteCollar/Image.png" alt="" />
 
-      <section id="aboutProject">
+      <section id="aboutProject" class="aboutProject">
         <div>
           <h3>Über <span class="borderText">Projekt</span></h3>
           <p>
@@ -86,7 +86,7 @@
         </div>
       </section>
 
-      <section id="goalsAndObjectives">
+      <section id="goalsAndObjectives" class="goalsAndObjectives">
         <h3>Ziele und <span class="borderText">Zielsetzungen</span></h3>
         <ul>
           <li>
@@ -115,6 +115,7 @@
           </li>
         </ul>
       </section>
+      
       <img
         class="organicShopImage"
         src="../img/whiteCollar/Image1.png"
@@ -351,5 +352,6 @@
     
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
+    <script src="../js/organic.js"></script>
   </body>
 </html>
