--- a/en/home.html
+++ b/en/home.html
@@ -16,7 +16,6 @@
       href="../css/cdn.jsdelivr.net_npm_swiper@10_swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="../css/slider.css" />
-
     <title>SD Rroduction</title>
   </head>
   <body>
@@ -1213,5 +1212,7 @@
     <script src="../js/cdn.jsdelivr.net_npm_swiper@10_swiper-bundle.min.js"></script>
     <script src="../js/swiper-slider.js"></script>
     <script src="../js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
+    <script src="..//js/smoothscroll.js"></script>
   </body>
 </html>
