--- a/en/organicShop.html
+++ b/en/organicShop.html
@@ -341,5 +341,7 @@
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
     <script src="../js/organic.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
+    <script src="..//js/smoothscroll.js"></script>
   </body>
 </html>
